fixed font size issues on mobile

--- a/alta/static/website/stylesheet.css
+++ b/alta/static/website/stylesheet.css
@@ -476,10 +476,6 @@ body{
         font-size: smaller;
     }
 
-    p{
-        font-size: 150%;
-    }
-
     .jumbo{
         min-height: 400px;
     }
@@ -500,6 +496,10 @@ body{
         display: block;
         width: 60%;
         margin: 0 auto;
+    }
+
+    .jumbo .button{
+        width: 50%;
     }
 
     header ul{
